@@ -5,3 +5,6 @@
 
 # 下载
 [JavaFx 下载](https://gluonhq.com/products/javafx/)
+
+精简jre
+jlink --module-path "D:\x64\Java\javafx-jmods-13.0.2" --add-modules javafx.web --output brower
